
VERSION 0.2.0

IN PROGRESS...

+ New story and dialogs, tons of them
+ Tools to load dialogs from CSV files
+ Added in-game story journal
* Locale can now be read from properties
* Dialog system improved. Now replies can set flags that can be queried after dialog end.
 Flags can also be used to hide replies, just like global variables.
+ Dungeon entrances on planet surface
* Monster and ship parameters tuned
* Intro dialogs are now shown in parallel with world generation

======================================================

VERSION 0.1.3

6.11.2013

+ Multiple resolution and fullscreen support
+ slf4j logging added
+ Quest line with rogues beacon completed
* Support for individual images for dialog statements
* New nice looking main menu
* New star sprites for background
* Bugfix

======================================================

VERSION 0.1.2

28.10.2013

+ New Swarm alien race
+ NPC ships can now fight each other, added relationship system between races
+ Line of sight and visibility calculation for dungeons
+ Warp effect for gardener ship
* Bugfix


======================================================

VERSION 0.1.1

21.10.2013

* Custom scanning descriptions for home planets
* Game pausing during modal dialogs is now working
* Some new art
* Bugfix

======================================================
VERSION 0.1.0

10.10.2013

+ Localization support
+ New gui panel for target selection
+ Planets with rings and satellites
+ New game over ending, when loosing all crew
+ More interactivity for dungeons: buttons and doors

=====================================================

VERSION 0.0.10

17.09.2013

* Extended dialog system. Dialogs can now have different initial statements, based on world state
+ New animated popup for planet landing. As landscape generation can take up to a minute, user must be sure
that the game has not hanged up
+ Added plants to planet surface
* Moved some research projects to external json files.